--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "guzuomuse/yii2-jquery-custom-content-scroller",
-	"description": "yii2 extension:yii2-jquery-custom-content-scroller based on "jquery custom content scroller"",
+	"description": "yii2 extension:yii2-jquery-custom-content-scroller based on jquery custom content scroller",
 	"type": "yii2-extension",
 	"keywords": ["yii2","extension","jquery-custom-content-scroller","scroller","scrollbar"],
 	"license": "Apache-2.0",
